@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.deccandelight" name="Deccan Delight" version="0.3.2" provider-name="gujal">
+<addon id="plugin.video.deccandelight" name="Deccan Delight" version="0.3.3" provider-name="gujal">
     <requires>
         <import addon="xbmc.python" version="2.20.0"/>
         <import addon="script.module.urlresolver" version="1.0.0"/>
